# docs/swagger.json
@@ -157,6 +157,11 @@
         },
         "/photos": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Get details of all photo",
                 "consumes": [
                     "application/json"
@@ -698,7 +703,8 @@
         }
     },
     "securityDefinitions": {
-        "BearerAuth": {
+        "Bearer": {
+            "description": "Type \"Bearer\" followed by a space and JWT token",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
